samples/_failures_safe/1761461867_eefafe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b936de9f.c: In function ‘main’:
./samples/SAFE/__tmp_b936de9f.c:160:5: error: expected expression at end of input
  160 |     for (
      |     ^~~
./samples/SAFE/__tmp_b936de9f.c:160:5: error: expected declaration or statement at end of input
